# data-matchmaker-benchmark

./: Dockerfile  README.md  pyproject.toml  requirements.txt  sample.env  scenario.toml  task_generation.ipynb  test_e2e.py
jan15_tasks/: accounts_tpcdi_lite_v3.csv  customers_tpcdi_lite_v3.csv  finwire_tpcdi_lite_v3.xml  gold_ground_truth_tpcdi_lite_v3.csv  prospect_tpcdi_lite_v3.xlsx  trades_tpcdi_lite_v3.csv
scripts/: run_local_test.py
src/: agent.py  main.py  mcp_server.py  messenger.py  mock_purple.py  server.py
tasks/task_easy_0/: ground_truth.json  households.csv  profiles.csv
tasks/task_easy_1/: ground_truth.json  internet_lines.csv
tasks/task_hard_0/: accounts.csv  ground_truth.json  internet.csv  services.csv  tenure.csv  users.csv
tasks/task_hard_1/: ground_truth.json  internet.csv  phones.csv  relations.csv  tenure.csv
tasks/task_medium_0/: demographics.csv  family.csv  ground_truth.json  tenureInfo.csv
tasks/task_medium_1/: ground_truth.json  internet.csv  phones.csv  security.csv
tests/: test_agent.py
